Fixed issue on mobile where h1 for a specific query was a font size too big

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -79,7 +79,7 @@
 	
 	h1 
 	{
-		font: 400 125% $psfont;
+		font: 400 110% $psfont;
 		margin: 0;
 	}
 
